<resources>
    <string name="app_name">Readify</string>
    <string name="sighin">SighIn</string>
    <string name="signin">SignIn</string>
    <string name="abc_email_com">abc@email.com</string>
    <string name="your_password">Your Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="full_name">Full name</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="your_password1">Your Password</string>
    <string name="book_title">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="upload">Upload</string>
    <string name="add_new_book">Add new Book</string>
    <string name="add_new_category">Add new category</string>
    <string name="category_title">Category Title</string>
    <string name="submit">Submit</string>
    <string name="enter_your_e_mail_address_and_we_ll_send_you_an_email_to_reset_your_password">Enter your e-mail address and we\'ll send you an email to reset your password</string>
    <string name="email_id">Email-id</string>
    <string name="sumbit">SUMBIT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sighup">Sign Up</string>
    <string name="profile">PROFILE</string>
    <string name="back_arrow">back_arrow</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="_12sp">12sp</string>
    <string name="don_t_have_an_account">DON\'T HAVE AN ACCOUNT ?</string>
    <string name="signup">SIGNUP</string>
    <string name="book_details">BOOK DETAILS</string>
    <string name="category">Category</string>
    <string name="n_a">N/A</string>
    <string name="date">Date</string>
<!--    <string name="default_web_client_id">27940962271-dfjq63k1ceh2b6s4ntoii5pptar1feir.apps.googleusercontent.com</string>-->
    <!--    <string name="default_web_client_id" />-->
    <string-array name="my_spinner_array">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <item>Option 4</item>
    </string-array>
</resources>