<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/b"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/b"
        android:drawableStart="@drawable/baseline_arrow_back_24"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_book"

        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"

        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_book_title"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="#1F1F23"
            android:hint="@string/book_title"
            android:textColor="#505760"
            android:textColorHint="#505760"
            android:paddingStart="10dp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_book_description"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="#1F1F23"
            android:hint="@string/book_description"
            android:textColor="#505760"
            android:textColorHint="#505760"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1F1F23"
            android:layout_margin="10dp"
            >
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/arrow_down_24"
                android:layout_gravity="center"
                />
        <Spinner
            android:id="@+id/my_spinner"
            android:padding="10dp"
            android:background="#1F1F23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/purple"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>
</LinearLayout>