<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/b"
    android:orientation="vertical"

    >

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/b"
        android:drawableStart="@drawable/baseline_arrow_back_24"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password"
        android:textSize="32sp"
        android:textStyle="bold"

        android:layout_marginStart="20dp"

        android:textColor="@color/white"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_margin="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_e_mail_address_and_we_ll_send_you_an_email_to_reset_your_password"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:textStyle="normal"
        android:layout_gravity="center"


        android:textColor="#505760"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#1F1F23"
        android:hint="@string/email_id"
        android:textColorHint="#505760"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:background="@color/purple"
        android:text="@string/sumbit"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"/>
   </LinearLayout>

</LinearLayout>