<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/b"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:src="@drawable/readlogo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="28dp"
                android:text="Sign in"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/email_24"
            android:hint=" abc@gmail.com"
            android:padding="10dp"
            android:textColorHint="#505760"
            android:textColor="#505760" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_edittext">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:hint=" Your Password"
                android:padding="10dp"
                android:textColorHint="#505760"
                android:textColor="#505760"
                android:inputType="textPassword" />

            <ImageButton
                android:id="@+id/btn_toggle_password_visibility"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/rounded_edittext"
                android:padding="10dp"
                android:src="@drawable/ic_visibility_off" />
        </LinearLayout>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">


            <ToggleButton
                android:id="@+id/toggle_button_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:button="@drawable/toggle_selector"
                android:checked="false"
                android:background="@null"
                android:backgroundTint="@color/purple"
                android:textColor="@color/white"
                android:text="@string/_12sp"/>
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                 android:layout_toEndOf="@+id/toggle_button_remember_me"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/forgot_password"
                android:textColor="@color/purple"
                android:textSize="14sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="10dp"
            android:background="@color/purple"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"

            android:layout_marginTop="28dp"
            android:layout_marginBottom="28dp"
            android:text="@string/or"
            android:textSize="20sp"
            android:textStyle="bold" />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="#1F1F23"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/btn_login_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:gravity="center_vertical"
                android:text="  LOGIN WITH GOOGLE"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/goole_logo" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/txt_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/signup"
                android:textColor="@color/purple"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>